--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
