--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,11 @@ PORT = 8080
 # database
 DATABASE_USERNAME = "navdishjaggi"
 DATABASE_PASSWORD = "navdishjaggi"
+
+#postgres
+DB_USERNAME = "postgres"
+DB_PASSWORD = "navdishjaggi"
+DB_DATABASE = "QuizDB"
+DB_HOST = "127.0.0.1"
+DB_DIALECT = "postgres"
+NODE_ENV = "development"
